--- a/Periodictable/indexPT.html
+++ b/Periodictable/indexPT.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Periodic Table  </title>
-        <marquee  direction="up"> &#128520 &#128156 Made By NaNa &#128156 &#128527 </marquee>
+        <marquee  direction="up"> &#128520 ❤️‍🔥 Made By dev-Farhana💕 ❤️‍🔥 </marquee>
        
     </head>
     <body bgcolor="tomato"  >
